manifests/role.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sciencedata-dev
  labels:
    name: sciencedata-dev
