manifests/deploy_user_pods_backend_testing.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sciencedata-dev
  labels:
    name: sciencedata-dev

---
apiVersion: v1
kind: Pod
metadata: 
  name: user-pods-backend-testing
  namespace: sciencedata-dev
  labels:
    app: user-pods-backend-testing
spec:
  serviceAccountName: user-pods-backend
  imagePullSecrets:
    - name: docker-registry-auth
  containers:
    - name: user-pods-backend-testing
      image: dockerregistry.clement.tel/user_pods_backend_testing
      ports:
        - containerPort: 22
          protocol: TCP
        - containerPort: 80
          protocol: TCP
      securityContext:
        capabilities:
          add:
            - "SYS_CHROOT"
            - "AUDIT_WRITE"
---
apiVersion: v1
kind: Service
metadata:
  name: user-pods-backend-testing-ssh
  namespace: sciencedata-dev
spec:
  type: NodePort
  ports:
    - port: 22
      targetPort: 22
      name: ssh
      protocol: TCP
      nodePort: 30002
  selector:
    app: user-pods-backend-testing
