manifests/deploy_user_pods_backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-pods-backend
  namespace: sciencedata
  labels:
    app: user-pods-backend
spec:
  serviceAccountName: user-pods-backend
  imagePullSecrets:
    - name: docker-registry-auth
  containers:
    - name: user-pods-backend
      image: dockerregistry.clement.tel/user_pods_backend
      ports:
        - containerPort: 80
          protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 127.0.0.0/8,10.0.0.0/8
  name: user-pods-backend
  namespace: sciencedata
spec:
  rules:
    - host: kube.sciencedata.dk
      http:
        paths:
          - backend:
              service:
                name: user-pods-backend-http
                port:
                  number: 80
            path: /
            pathType: Prefix

---
apiVersion: v1
kind: Service
metadata:
  name: user-pods-backend-http
  namespace: sciencedata
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: user-pods-backend
